src/objects/Business_Location_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Location__c</fullName>
        <label>Business Location</label>
        <referenceTo>Business_Location__c</referenceTo>
        <relationshipLabel>Business Location Contacts</relationshipLabel>
        <relationshipName>Business_Location_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the business location contact person.</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Business Location Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Location Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>